--- a/two-tier-app/two-tier-flask-deployment.yml
+++ b/two-tier-app/two-tier-flask-deployment.yml
@@ -30,3 +30,9 @@ spec:
           ports:
             - containerPort: 5000
           imagePullPolicy: Always
+          resources:
+             requests:
+               cpu: "100m"
+             limits:
+               cpu: "500m"
+
